gitignore settings.py

--- a/Django/.gitignore
+++ b/Django/.gitignore
@@ -1,3 +1,5 @@
+#settings.py
+/Django/settings.py
 
 # Created by https://www.toptal.com/developers/gitignore/api/django
 # Edit at https://www.toptal.com/developers/gitignore?templates=django
