--- a/Mobile_app/package.json
+++ b/Mobile_app/package.json
@@ -8,6 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-native-fontawesome": "^0.2.6",
     "axios": "^0.21.0",
     "expo": "^39.0.5",
     "expo-barcode-scanner": "^9.0.0",
@@ -17,6 +20,8 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-paper": "^4.4.1",
+    "react-native-svg": "^12.1.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
