--- a/Mobile_app/package.json
+++ b/Mobile_app/package.json
@@ -15,7 +15,7 @@
     "expo": "^39.0.5",
     "expo-barcode-scanner": "^9.0.0",
     "expo-secure-store": "^9.2.0",
-    "expo-status-bar": "~1.0.2",
+    "expo-status-bar": "^1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
