--- a/Mobile_app/package.json
+++ b/Mobile_app/package.json
@@ -19,6 +19,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-flash-message": "^0.1.17",
     "react-native-paper": "^4.4.1",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.1.0",
